resources/tests/invalid_syntax/primary.ct
//Error: Expected an expression!
fn hello()->i32: +=;